; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_continue_authenticate.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_imap.c_imap_continue_authenticate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.imap_conn }
%struct.imap_conn = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.connectdata*, i8*)* @imap_continue_authenticate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imap_continue_authenticate(%struct.connectdata* %0, i8* %1) #0 {
  %3 = alloca %struct.connectdata*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.imap_conn*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %7 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store %struct.imap_conn* %8, %struct.imap_conn** %5, align 8
  %9 = load %struct.imap_conn*, %struct.imap_conn** %5, align 8
  %10 = getelementptr inbounds %struct.imap_conn, %struct.imap_conn* %9, i32 0, i32 0
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @Curl_pp_sendf(i32* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %11)
  ret i32 %12
}

declare dso_local i32 @Curl_pp_sendf(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
